@@ -2,6 +2,7 @@
  * CHANGELOG.
  */
 
+03312007 - Added a quick'n'dirty unpack utility to the extras directory.
 03282007 - Logic bug in MVL/HOG/GRP archivers: only enumerated files when
            looking in a directory other than the root, instead of enumerating
            only for the root (thanks, Chris!). Minor fix for compilers that
